--- a/Spacious.vcxproj
+++ b/Spacious.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="MainWindow.xaml.h">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </ClInclude>
+    <ClInclude Include="Reminder.h" />
     <ClInclude Include="ReminderDetailsPage.xaml.h">
       <DependentUpon>ReminderDetailsPage.xaml</DependentUpon>
       <SubType>Code</SubType>
