--- a/Spacious.vcxproj.filters
+++ b/Spacious.vcxproj.filters
@@ -30,6 +30,7 @@
     </ClInclude>
     <ClInclude Include="NotificationActivator.h" />
     <ClInclude Include="Date.h" />
+    <ClInclude Include="Reminder.h" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="app.manifest" />
