--- a/Spacious.vcxproj
+++ b/Spacious.vcxproj
@@ -138,6 +138,7 @@
       <DependentUpon>ReminderDetailsPage.xaml</DependentUpon>
       <SubType>Code</SubType>
     </ClInclude>
+    <ClInclude Include="ReminderStore.h" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml" />
@@ -190,6 +191,7 @@
       <DependentUpon>ReminderDetailsPage.xaml</DependentUpon>
       <SubType>Code</SubType>
     </ClCompile>
+    <ClCompile Include="ReminderStore.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="App.idl">
