--- a/Spacious.vcxproj
+++ b/Spacious.vcxproj
@@ -280,6 +280,9 @@
     <XliffResource Include="MultilingualResources\Spacious.ja.xlf" />
     <XliffResource Include="MultilingualResources\Spacious.vi.xlf" />
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="resources.rc" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="packages\Microsoft.WindowsAppSDK.1.1.1\build\native\Microsoft.WindowsAppSDK.targets" Condition="Exists('packages\Microsoft.WindowsAppSDK.1.1.1\build\native\Microsoft.WindowsAppSDK.targets')" />
