Improved the app icon.

--- a/Spacious.vcxproj.filters
+++ b/Spacious.vcxproj.filters
@@ -63,4 +63,7 @@
   <ItemGroup>
     <ResourceCompile Include="resources.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Icon.ico" />
+  </ItemGroup>
 </Project>
